--- a/index.html
+++ b/index.html
@@ -19,38 +19,33 @@
     <p class="lead">A simple calendar app for scheduling your work day</p>
     <p id="currentDay" class="lead"></p>
   </header>
-  <div class="container" style="border: 1px solid red; margin: 5px auto;">
-    <div class="row">
-      <div class="col-9 color-change" style="border: 1px solid green; margin: 5px auto"></div>
-      <div class="col-1" style="border: 1px solid orange; margin: 5px auto;"></div>
+  <div class="container">
+    <div class="row style-row">
+      <div class="col-4 col-header"></div>
     </div>
-    <div class="row">
-      <div class="col-9 color-change" style="border: 1px solid green; margin: 5px auto"></div>
-      <div class="col-1" style="border: 1px solid orange; margin: 5px auto;"></div>
+    <div class="row style-row">
+      <div class="col-9 color-change-9"><i class="fa fa-2x fa-download btn" aria-hidden="true"></i></div>
     </div>
-    <div class="row">
-      <div class="col-9 color-change" style="border: 1px solid green; margin: 5px auto"></div>
-      <div class="col-1" style="border: 1px solid orange; margin: 5px auto;"></div>
+    <div class="row style-row">
+      <div class="col-9 color-change-9"><i class="fa fa-2x fa-download btn" aria-hidden="true"></i></div>
     </div>
-    <div class="row">
-      <div class="col-9 color-change" style="border: 1px solid green; margin: 5px auto"></div>
-      <div class="col-1" style="border: 1px solid orange; margin: 5px auto;"></div>
+    <div class="row style-row">
+      <div class="col-9 color-change-9"><i class="fa fa-2x fa-download btn" aria-hidden="true"></i></div>
     </div>
-    <div class="row">
-      <div class="col-9 color-change" style="border: 1px solid green; margin: 5px auto"></div>
-      <div class="col-1" style="border: 1px solid orange; margin: 5px auto;"></div>
+    <div class="row style-row">
+      <div class="col-9 color-change-9"><i class="fa fa-2x fa-download btn" aria-hidden="true"></i></div>
     </div>
-    <div class="row">
-      <div class="col-9 color-change" style="border: 1px solid green; margin: 5px auto"></div>
-      <div class="col-1" style="border: 1px solid orange; margin: 5px auto;"></div>
+    <div class="row style-row">
+      <div class="col-9 color-change-9"><i class="fa fa-2x fa-download btn" aria-hidden="true"></i></div>
     </div>
-    <div class="row">
-      <div class="col-9 color-change" style="border: 1px solid green; margin: 5px auto"></div>
-      <div class="col-1" style="border: 1px solid orange; margin: 5px auto;"></div>
+    <div class="row style-row">
+      <div class="col-9 color-change-9"><i class="fa fa-2x fa-download btn" aria-hidden="true"></i></div>
     </div>
-    <div class="row">
-      <div class="col-9 color-change" style="border: 1px solid green; margin: 5px auto"></div>
-      <div class="col-1" style="border: 1px solid orange; margin: 5px auto;"></div>
+    <div class="row style-row">
+      <div class="col-9 color-change-9"><i class="fa fa-2x fa-download btn" aria-hidden="true"></i></div>
+    </div>
+    <div class="row style-row">
+      <div class="col-9 color-change-9"><i class="fa fa-2x fa-download btn" aria-hidden="true"></i></div>
     </div>
   </div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
