--- a/index.html
+++ b/index.html
@@ -16,14 +16,11 @@
 <body>
   <header class="jumbotron">
     <h1 class="display-3">Work Day Scheduler</h1>
-    <p class="lead">A simple calendar app for scheduling your work day</p>
-    <p id="currentDay" class="lead"></p>
+    <p>A simple calendar app for scheduling your work day</p>
+    <p id="currentDay" class="lead"><!--Current day goes here--></p>
   </header>
   <div class="container">
-    <div class="row style-row">
-      <div class="col-4 col-header"></div>
-    </div>
-    <div class="row style-row">
+    <div class="row style-row" style="margin-top: 20px;">
       <div class="col-9 color-change-9"><i class="fa fa-2x fa-download btn" aria-hidden="true"></i></div>
     </div>
     <div class="row style-row">
