added function colorCode

--- a/index.html
+++ b/index.html
@@ -21,28 +21,28 @@
   </header>
   <div class="container">
     <div class="row style-row" style="margin-top: 20px;">
-      <div class="col-9 color-change-9"><p class="block-1 style" style="float:left;"></p><i class="fa fa-2x fa-download btn" aria-hidden="true"></i></div>
+      <div class="col-9 color-change-9 block-past"><p class="block-1 style" style="float:left;"></p><i class="fa fa-lg fa-download btn" aria-hidden="true"></i></div>
     </div>
     <div class="row style-row">
-      <div class="col-9 color-change-9"><p class="block-2 style" style="float:left;"></p><i class="fa fa-2x fa-download btn" aria-hidden="true"></i></div>
+      <div class="col-9 color-change-9 block-past"><p class="block-2 style" style="float:left;"></p><i class="fa fa-lg fa-download btn" aria-hidden="true"></i></div>
     </div>
     <div class="row style-row">
-      <div class="col-9 color-change-9"><p class="block-3 style" style="float:left;"></p><i class="fa fa-2x fa-download btn" aria-hidden="true"></i></div>
+      <div class="col-9 color-change-9 block-past"><p class="block-3 style" style="float:left;"></p><i class="fa fa-lg fa-download btn" aria-hidden="true"></i></div>
     </div>
     <div class="row style-row">
-      <div class="col-9 color-change-9"><p class="block-4 style" style="float:left;"></p><i class="fa fa-2x fa-download btn" aria-hidden="true"></i></div>
+      <div class="col-9 color-change-9 block-present"><p class="block-4 style" style="float:left;"></p><i class="fa fa-lg fa-download btn" aria-hidden="true"></i></div>
     </div>
     <div class="row style-row">
-      <div class="col-9 color-change-9"><p class="block-5 style" style="float:left;"></p><i class="fa fa-2x fa-download btn" aria-hidden="true"></i></div>
+      <div class="col-9 color-change-9 block-future"><p class="block-5 style" style="float:left;"></p><i class="fa fa-lg fa-download btn" aria-hidden="true"></i></div>
     </div>
     <div class="row style-row">
-      <div class="col-9 color-change-9"><p class="block-6 style" style="float:left;"></p><i class="fa fa-2x fa-download btn" aria-hidden="true"></i></div>
+      <div class="col-9 color-change-9 block-future"><p class="block-6 style" style="float:left;"></p><i class="fa fa-lg fa-download btn" aria-hidden="true"></i></div>
     </div>
     <div class="row style-row">
-      <div class="col-9 color-change-9"><p class="block-7 style" style="float:left;"></p><i class="fa fa-2x fa-download btn" aria-hidden="true"></i></div>
+      <div class="col-9 color-change-9 block-future"><p class="block-7 style" style="float:left;"></p><i class="fa fa-lg fa-download btn" aria-hidden="true"></i></div>
     </div>
     <div class="row style-row">
-      <div class="col-9 color-change-9"><p class="block-8 style" style="float:left;"></p><i class="fa fa-2x fa-download btn" aria-hidden="true"></i></div>
+      <div class="col-9 color-change-9 block-future"><p class="block-8 style" style="float:left;"></p><i class="fa fa-lg fa-download btn" aria-hidden="true"></i></div>
     </div>
   </div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
