changes to html and css

--- a/index.html
+++ b/index.html
@@ -17,37 +17,55 @@
   <header class="jumbotron">
     <h1 class="display-3">Work Day Scheduler</h1>
     <p>A simple calendar app for scheduling your work day</p>
-    <p id="currentDay" class="lead"><!--Current day goes here--></p>
+    <p id="currentDay" class="lead">
+      <!--Current day goes here-->
+    </p>
   </header>
   <div class="container">
     <div class="row style-row" style="margin-top: 20px;">
-      <div class="col-9 color-change-9 block-past"><p class="block-1 style" style="float:left;"></p><i class="fa fa-lg fa-download btn" aria-hidden="true"></i></div>
+      <div class="col-9 color-change-9 block-past">
+        <p class="block-1 style " style="float:left;"></p><i class="fa fa-lg fa-download btn" aria-hidden="true"></i>
+      </div>
     </div>
     <div class="row style-row">
-      <div class="col-9 color-change-9 block-past"><p class="block-2 style" style="float:left;"></p><i class="fa fa-lg fa-download btn" aria-hidden="true"></i></div>
+      <div class="col-9 color-change-9 block-past">
+        <p class="block-2 style" style="float:left;"></p><i class="fa fa-lg fa-download btn" aria-hidden="true"></i>
+      </div>
     </div>
     <div class="row style-row">
-      <div class="col-9 color-change-9 block-past"><p class="block-3 style" style="float:left;"></p><i class="fa fa-lg fa-download btn" aria-hidden="true"></i></div>
+      <div class="col-9 color-change-9 block-past">
+        <p class="block-3 style" style="float:left;"></p><i class="fa fa-lg fa-download btn" aria-hidden="true"></i>
+      </div>
     </div>
     <div class="row style-row">
-      <div class="col-9 color-change-9 block-present"><p class="block-4 style" style="float:left;"></p><i class="fa fa-lg fa-download btn" aria-hidden="true"></i></div>
+      <div class="col-9 color-change-9 block-present">
+        <p class="block-4 style" style="float:left;"></p><i class="fa fa-lg fa-download btn" aria-hidden="true"></i>
+      </div>
     </div>
     <div class="row style-row">
-      <div class="col-9 color-change-9 block-future"><p class="block-5 style" style="float:left;"></p><i class="fa fa-lg fa-download btn" aria-hidden="true"></i></div>
+      <div class="col-9 color-change-9 block-future">
+        <p class="block-5 style" style="float:left;"></p><i class="fa fa-lg fa-download btn" aria-hidden="true"></i>
+      </div>
     </div>
     <div class="row style-row">
-      <div class="col-9 color-change-9 block-future"><p class="block-6 style" style="float:left;"></p><i class="fa fa-lg fa-download btn" aria-hidden="true"></i></div>
+      <div class="col-9 color-change-9 block-future">
+        <p class="block-6 style" style="float:left;"></p><i class="fa fa-lg fa-download btn" aria-hidden="true"></i>
+      </div>
     </div>
     <div class="row style-row">
-      <div class="col-9 color-change-9 block-future"><p class="block-7 style" style="float:left;"></p><i class="fa fa-lg fa-download btn" aria-hidden="true"></i></div>
+      <div class="col-9 color-change-9 block-future">
+        <p class="block-7 style" style="float:left;"></p><i class="fa fa-lg fa-download btn" aria-hidden="true"></i>
+      </div>
     </div>
     <div class="row style-row">
-      <div class="col-9 color-change-9 block-future"><p class="block-8 style" style="float:left;"></p><i class="fa fa-lg fa-download btn" aria-hidden="true"></i></div>
+      <div class="col-9 color-change-9 block-future">
+        <p class="block-8 style" style="float:left;"></p><i class="fa fa-lg fa-download btn" aria-hidden="true"></i>
+      </div>
     </div>
   </div>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="assets/script/javascript.js"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+  <script src="assets/script/javascript.js"></script>
 </body>
 
 </html>
