--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <div class="container">
     <div class="row style-row" style="margin-top: 20px;">
       <div class="col-9 color-change-9 block-past">
-        <p class="block-1 style " style="float:left;"></p><i class="fa fa-lg fa-download btn" aria-hidden="true"></i>
+        <p class="block-1 style " style="float:left;"></p><input type="text"></input><i class="fa fa-lg fa-download btn" aria-hidden="true"></i>
       </div>
     </div>
     <div class="row style-row">
