fixing the local storage save feature

--- a/index.html
+++ b/index.html
@@ -21,47 +21,47 @@
     </p>
   </header>
   <div class="container">
-    <div class="row style-row" style="margin-top: 20px;">
+    <div class="row style-row rowOne" style="margin-top: 20px;">
       <div class="col-9 color-change-9 block-past">
         <p class="block-1 style " style="float:left;"></p><input type="text" class="content-0" value=""></input><i class="fa fa-lg fa-download btn" aria-hidden="true"></i>
       </div>
     </div>
-    <div class="row style-row">
+    <div class="row style-row rowTwo">
       <div class="col-9 color-change-9 block-past">
         <p class="block-2 style " style="float:left;"></p><input type="text" class="content-1"></input><i class="fa fa-lg fa-download btn" aria-hidden="true"></i>
       </div>
     </div>
-    <div class="row style-row">
+    <div class="row style-row rowThree">
       <div class="col-9 color-change-9 block-past">
         <p class="block-3 style " style="float:left;"></p><input type="text" class="content-2"></input><i class="fa fa-lg fa-download btn" aria-hidden="true"></i>
       </div>
     </div>
-    <div class="row style-row">
+    <div class="row style-row rowFour">
       <div class="col-9 color-change-9 block-present">
         <p class="block-4 style " style="float:left;"></p><input type="text" class="content-3"></input><i class="fa fa-lg fa-download btn" aria-hidden="true"></i>
       </div>
     </div>
-    <div class="row style-row">
+    <div class="row style-row rowFive">
       <div class="col-9 color-change-9 block-future">
         <p class="block-5 style " style="float:left;"></p><input type="text" class="content-4"></input><i class="fa fa-lg fa-download btn" aria-hidden="true"></i>
       </div>
     </div>
-    <div class="row style-row">
+    <div class="row style-row rowSix">
       <div class="col-9 color-change-9 block-future">
         <p class="block-6 style " style="float:left;"></p><input type="text" class="content-5"></input><i class="fa fa-lg fa-download btn" aria-hidden="true"></i>
       </div>
     </div>
-    <div class="row style-row">
+    <div class="row style-row rowSeven">
       <div class="col-9 color-change-9 block-future">
         <p class="block-7 style " style="float:left;"></p><input type="text" class="content-6"></input><i class="fa fa-lg fa-download btn" aria-hidden="true"></i>
       </div>
     </div>
-    <div class="row style-row">
+    <div class="row style-row rowEight">
       <div class="col-9 color-change-9 block-future">
         <p class="block-8 style " style="float:left;"></p><input type="text" class="content-7"></input><i class="fa fa-lg fa-download btn" aria-hidden="true"></i>
       </div>
     </div>
-      <div class="row style-row">
+      <div class="row style-row rowNine">
         <div class="col-9 color-change-9 block-future">
           <p class="block-9 style " style="float:left;"></p><input type="text" class="content-8"></input><i class="fa fa-lg fa-download btn" aria-hidden="true"></i>
         </div>
